don't remember encoding if known to be broken

BUG: 445015